<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecturenotes"

    android:background="#F8BBD0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjects"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/mathematics" />

    <Button
        android:id="@+id/oop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops" />

    <Button
        android:id="@+id/dsa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dsa" />

    <Button
        android:id="@+id/dec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dec" />

    <Button
        android:id="@+id/eco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/economics" />
    </LinearLayout>
</ScrollView>