<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9EA59"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/department_of_computer_science_and_engineering_n"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo" />


        <EditText
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:layout_marginTop="50dp"
            android:inputType="textAutoComplete"
            android:autofillHints="" />
        <EditText
            android:id="@+id/regd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_registration_no"
            android:layout_marginTop="30dp"
            android:maxLength="10"
            android:digits="0123456789"
            android:inputType="textAutoComplete"
            android:autofillHints="" />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/no"
            android:digits="0123456789"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mobile_number"
            android:layout_marginTop="30dp"
            android:inputType="textAutoComplete"
            android:autofillHints="" />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_8_characters"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            tools:ignore="ButtonStyle" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:text="@string/forgot_password_ncontact_us_n"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>




</ScrollView>