<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="#F8BBD0"
    tools:context=".PROFILE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/department_of_ncomputer_science_and_engineering"
            android:textColor="#000"
            android:textSize="32sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/tt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timetable"
                    android:textSize="20sp"
                    android:layout_marginTop="22dp"
                    android:layout_gravity="center" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faculty"
                    android:textSize="20sp"
                    android:id="@+id/fac"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/syllabus"
                    android:id="@+id/sb"
                    android:textSize="20sp"
                    android:layout_marginTop="22dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/holidays"
                    android:id="@+id/ho"
                    android:textSize="20sp"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:layout_gravity="center"

            android:text="@string/lecture_notes"/>

        <Button
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:text="@string/contact_us"/>


    </LinearLayout>
</ScrollView>