<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8BBD0"
    tools:context=".contact">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/cs"
            android:layout_margin="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="@string/college_comrade"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="#F00000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="32sp"
            android:id="@+id/a"
            android:layout_below="@id/cs"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/a"
            android:id="@+id/about"
            android:layout_margin="32dp"
            android:text="@string/this_app_contains_all_information_about_the_computer_science_and_engineering_department_for_second_year_of_vssut_burla_n_nthe_information_like_time_table_syllabus_lecture_notes_etc_enables_user_to_access_all_the_requirements_of_a_student_in_department_the_information_here_guides_you_in_the_academic_areas_in_healthy_manner_this_is_really_a_handy_app"/>
        <TextView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="100dp"
            android:text="@string/develpoed_by"
            android:textAlignment="center"
            android:layout_below="@id/about"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/rittik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_students_club_dsc_vssut_n8895350695"
            android:textAlignment="center"
            android:layout_below="@id/dev"
            android:textSize="20sp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="50dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            />
        <!--<TextView
            android:id="@+id/aitik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Aitik Dandapat:\n   6206014527"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dev"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="50dp" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rittik"
            android:layout_centerHorizontal="true"
            android:text="@string/we_value_your_feedback"
            android:textSize="25sp"
            android:layout_marginTop="100dp"/>

    </RelativeLayout>

</ScrollView>
